// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@biorate/auto-object AutoObject 1`] = `
User {
  "address": Address {
    "apartment": 74,
    "city": "Moscow",
    "geo": Array [
      12321,
      32123,
    ],
    "postal": 123321,
    "street": "Gogol str.",
  },
  "firstName": "Vasya",
  "id": 1,
  "lastName": "Pupkin",
}
`;

exports[`@biorate/auto-object AutoObject 2`] = `"123321, Moscow, Gogol str. №74"`;

exports[`@biorate/auto-object AutoObject.extends 1`] = `
Event {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "name": "user",
  "payload": User {
    "address": Address {
      "apartment": 74,
      "city": "Moscow",
      "geo": Array [
        12321,
        32123,
      ],
      "postal": 123321,
      "street": "Gogol str.",
    },
    "firstName": "Vasya",
    "id": 1,
    "lastName": "Pupkin",
  },
  Symbol(shapeMode): false,
  Symbol(kCapture): false,
}
`;
